# ilab-on-ocp

./: Dockerfile  importer-pipeline.yaml  pipeline.yaml  pyproject.toml  requirements.txt
