[project]
name = "ilab-on-ocp"
version = "0.1.0"
description = "Run the iLab workflow on RHOAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "httpx==0.28.1",
    "jinja2>=3.1.4",
    # Using targetted KFP packages for required bug fixes and features
    "kfp-kubernetes@https://github.com/kubeflow/pipelines/archive/64e8264352b6e3981e0e64e2156864468cf156cc.tar.gz#egg=kfp-kubernetes&subdirectory=kubernetes_platform/python",
    "kfp@https://github.com/kubeflow/pipelines/archive/64e8264352b6e3981e0e64e2156864468cf156cc.tar.gz#egg=kfp&subdirectory=sdk/python",
    "kubernetes==30.1.0",
    "model-registry==0.2.14",
    "olot==0.1.2",
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
    "kubeflow-training==1.8.1"
]
